--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "jsdoc": "^3.5.5",
     "localStorage": "^1.0.3",
     "minimatch": "^3.0.4",
-    "randombytes": "^2.0.5",
-    "mongoose": "^5.2.7"
+    "mongoose": "^5.2.9",
+    "randombytes": "^2.0.5"
   },
   "devDependencies": {
     "@types/node": "^8.0.3",
