--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-polyfill": "^6.26.0",
     "bigi": "^1.4.2",
     "binaryen": "^37.0.0",
+    "bip39": "^2.5.0",
     "browserify-aes": "^1.0.6",
     "bs58": "^4.0.1",
     "bytebuffer": "^5.0.1",
@@ -44,6 +45,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jsdoc": "^3.5.5",
     "localStorage": "^1.0.3",
+    "lodash": "^4.17.10",
     "minimatch": "^3.0.4",
     "mongoose": "^5.2.9",
     "randombytes": "^2.0.5"
