--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "localStorage": "^1.0.3",
     "lodash": "^4.17.10",
     "minimatch": "^3.0.4",
-    "mongoose": "^5.2.9",
+    "mongoose": "^5.2.12",
+    "node-localstorage": "^1.3.1",
     "randombytes": "^2.0.5"
   },
   "devDependencies": {
