--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "test": "NODE_ENV=development mocha test/index.test.js --timeout 10000",
-    "docs": "node test/gendoc.js && rm -rf docs && mkdir docs && node_modules/.bin/jsdoc -c jsdoc.json"
+    "docs": "node test/gendoc.js && rm -rf docs && mkdir docs && node_modules/.bin/jsdoc -c jsdoc.json",
+    "es5": "rm -fr es5 && babel --copy-files src --out-dir es5",
+    "build": "rm -rf dist && mkdir dist && browserify -o dist/u3.js -s U3.js es5/index.js && uglifyjs dist/u3.js -o dist/u3.min.js --source-map --compress --mangle"
   },
   "repository": {
     "type": "git",
@@ -36,16 +38,12 @@
     "camel-case": "^3.0.0",
     "create-hash": "^1.1.3",
     "create-hmac": "^1.1.6",
-    "docdash": "^0.4.0",
     "ecurve": "^1.0.5",
     "fcbuffer": "^2.2.0",
-    "glob": "^7.1.2",
-    "history": "^4.7.2",
-    "is-browser": "^2.0.1",
     "isomorphic-fetch": "^2.2.1",
-    "jsdoc": "^3.5.5",
     "localStorage": "^1.0.3",
-    "lodash": "^4.17.10",
+    "lodash.isempty": "^4.4.0",
+    "lodash.isstring": "^4.0.1",
     "minimatch": "^3.0.4",
     "mongoose": "^5.2.12",
     "node-localstorage": "^1.3.1",
@@ -57,6 +55,7 @@
     "babel-core": "^6.26.0",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "blanket": "*",
     "bluebird": "^3.5.0",
@@ -64,6 +63,7 @@
     "camel-case": "^3.0.0",
     "chai": "4.1.2",
     "coveralls": "^3.0.0",
+    "docdash": "^1.0.0",
     "documentation": "^5.3.2",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^12.0.0-alpha.0",
@@ -72,11 +72,29 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
     "istanbul": "^0.4.5",
+    "jsdoc": "^3.5.5",
     "mocha": "3.5.0",
     "nyc": "^11.7.1",
     "pedding": "*",
     "should": "1.2.2",
-    "travis-cov": "*"
+    "travis-cov": "*",
+    "uglify-js": "3.4.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "babel": {
+    "presets": [
+      "es2015"
+    ],
+    "plugins": [
+      "syntax-async-functions",
+      "transform-regenerator",
+      [
+        "transform-runtime",
+        {
+          "polyfill": false,
+          "regenerator": true
+        }
+      ]
+    ]
+  }
 }
