--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha test/index.test.js && mocha test/history.test.js --timeout 20000",
+    "test": "mocha test/index.test.js --timeout 30000",
     "docs": "node test/gendoc.js && rm -rf docs && mkdir docs && node_modules/.bin/jsdoc -c jsdoc.json",
     "es5": "rm -fr es5 && babel --copy-files src --out-dir es5",
     "build": "rm -rf dist && mkdir dist && browserify -o dist/u3.js -s U3 es5/index.js && uglifyjs dist/u3.js -o dist/u3.min.js --source-map --compress --mangle"
@@ -40,7 +40,7 @@
     "create-hash": "^1.1.3",
     "create-hmac": "^1.1.6",
     "ecurve": "^1.0.5",
-    "fcbuffer": "^2.2.0",
+    "fcbuffer": "^2.2.1",
     "isomorphic-fetch": "^2.2.1",
     "localStorage": "^1.0.3",
     "lodash.isempty": "^4.4.0",
