--- a/docker/config.ini
+++ b/docker/config.ini
@@ -65,7 +65,7 @@ http-server-address = 0.0.0.0:8888
 # https-private-key-file = 
 
 # Specify the Access-Control-Allow-Origin to be returned on each request. (ultrainio::http_plugin)
-access-control-allow-origin = false
+access-control-allow-origin = *
 
 # Specify the Access-Control-Allow-Headers to be returned on each request. (ultrainio::http_plugin)
 # access-control-allow-headers = 
@@ -131,7 +131,7 @@ pause-on-startup = false
 max-transaction-time = 300
 
 # Limits the maximum age (in seconds) of the DPOS Irreversible Block for a chain this node will produce blocks on (use negative value to indicate unlimited) (ultrainio::producer_plugin)
-max-irreversible-block-age = -1
+max-irreversible-block-age = 10
 
 # ID of producer controlled by this node (e.g. inita; may specify multiple times) (ultrainio::producer_plugin)
 # producer-name = 
