update contract return length

--- a/docker/config.ini
+++ b/docker/config.ini
@@ -169,6 +169,12 @@ unlock-timeout = 900
 # ultrainio key that will be imported automatically when a wallet is created. (ultrainio::wallet_plugin)
 # ultrainio-key = 
 
+# Contract return string length limits the string length of Returns (ultrainio::chain_plugin)
+contract-return-string-length = 512
+
+# Contract emit string length limits the string length of serialized EventObject. (ultrainio::chain_plugin)
+contract-emit-string-length = 128
+
 # Plugin(s) to enable, may be specified multiple times
 # plugin = 
 plugin = ultrainio::bnet_plugin
