--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@types/node": "^8.0.3",
+    "async-test-util": "https://github.com/ultrain-os/u3-utils.git",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-plugin-syntax-async-functions": "^6.13.0",
@@ -78,6 +79,7 @@
     "pedding": "*",
     "should": "1.2.2",
     "travis-cov": "*",
+    "u3-utils": "https://github.com/ultrain-os/u3-utils.git",
     "uglify-js": "3.4.1"
   },
   "license": "MIT",
