--- a/docker-cropnet/Dockerfile
+++ b/docker-cropnet/Dockerfile
@@ -2,6 +2,9 @@ FROM registry.cn-hangzhou.aliyuncs.com/ultrain/ultraind:1.0.1
 COPY config.ini /root/.local/share/ultrainio/nodultrain/config/
 COPY init.sh /
 COPY init2.sh /
+COPY history /history/
+
+RUN ls -la /history/*
 
 EXPOSE 27017
 EXPOSE 8888
