--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "u3.js",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Node wrapper for Ultrain API",
   "main": "index.js",
   "directories": {
@@ -59,9 +59,11 @@
     "babel-preset-es2015": "^6.24.1",
     "blanket": "*",
     "bluebird": "^3.5.0",
+    "body-parser": "^1.18.3",
     "browserify": "^14.4.0",
     "camel-case": "^3.0.0",
     "chai": "4.1.2",
+    "connect": "^3.6.6",
     "coveralls": "^3.0.0",
     "docdash": "^1.0.0",
     "documentation": "^5.3.2",
@@ -71,6 +73,8 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
+    "express": "^4.16.3",
+    "http": "0.0.0",
     "istanbul": "^0.4.5",
     "jsdoc": "^3.5.5",
     "mocha": "3.5.0",
@@ -78,8 +82,9 @@
     "pedding": "*",
     "should": "1.2.2",
     "travis-cov": "*",
-    "u3-utils": "https://github.com/ultrain-os/u3-utils.git",
-    "uglify-js": "3.4.1"
+    "u3-utils": "^0.0.1",
+    "uglify-js": "3.4.1",
+    "url": "^0.11.0"
   },
   "license": "MIT",
   "babel": {
