--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "u3.js",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Node wrapper for Ultrain API",
   "main": "index.js",
   "directories": {
@@ -81,7 +81,7 @@
     "should": "1.2.2",
     "travis-cov": "*",
     "u3-utils": "^0.0.1",
-    "uglify-js": "3.4.1",
+    "uglify-es": "^3.3.9",
     "url": "^0.11.0"
   },
   "license": "MIT",
