--- a/docker-testnet/history/package.json
+++ b/docker-testnet/history/package.json
@@ -7,11 +7,14 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-timeout": "^1.9.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "mongoose": "^5.2.12",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "node-schedule": "^1.3.0",
+    "u3.js": "^0.1.3"
   },
   "devDependencies": {
     "axios": "^0.18.0",
