--- a/package.json
+++ b/package.json
@@ -29,23 +29,7 @@
   ],
   "dependencies": {
     "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
-    "bigi": "^1.4.2",
-    "binaryen": "^37.0.0",
-    "bip39": "^2.5.0",
-    "browserify-aes": "^1.0.6",
-    "bs58": "^4.0.1",
-    "bytebuffer": "^5.0.1",
-    "camel-case": "^3.0.0",
-    "create-hash": "^1.1.3",
-    "create-hmac": "^1.1.6",
-    "ecurve": "^1.0.5",
-    "fcbuffer": "^2.2.1",
-    "isomorphic-fetch": "^2.2.1",
-    "lodash.isempty": "^4.4.0",
-    "lodash.isstring": "^4.0.1",
-    "minimatch": "^3.0.4",
-    "randombytes": "^2.0.5"
+    "babel-polyfill": "^6.26.0"
   },
   "devDependencies": {
     "@types/node": "^8.0.3",
@@ -80,7 +64,7 @@
     "pedding": "*",
     "should": "1.2.2",
     "travis-cov": "*",
-    "u3-utils": "^0.0.1",
+    "u3-utils": "^0.0.2",
     "uglify-es": "^3.3.9",
     "url": "^0.11.0"
   },
