--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "u3.js",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Node wrapper for Ultrain API",
   "main": "index.js",
   "directories": {
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "u3-utils": "^0.0.2"
   },
   "devDependencies": {
     "@types/node": "^8.0.3",
@@ -64,7 +65,6 @@
     "pedding": "*",
     "should": "1.2.2",
     "travis-cov": "*",
-    "u3-utils": "^0.0.2",
     "uglify-es": "^3.3.9",
     "url": "^0.11.0"
   },
