compatible to new economy model

--- a/docker/node2/config/config.ini
+++ b/docker/node2/config/config.ini
@@ -2,8 +2,9 @@ verbose-http-errors = true
 http-validate-host = false
 is-non-producing-node = 1
 http-alias = 127.0.0.1:8888
-genesis-startup-time = 525600
-genesis-delay = 20
+
+genesis-time = 2018-12-25 10:00:00
+genesis-startup-time = 5256000
 
 max-round-seconds = 4
 max-phase-seconds = 2
@@ -50,7 +51,6 @@ max-irreversible-block-age = 10
 producer-name = ultrainio
 producer-name = inita
 
-signature-provider = UTR6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV=KEY:5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3
 kultraind-provider-timeout = 5
 txn-reference-block-lag = 0
 
