--- a/docker/history/package.json
+++ b/docker/history/package.json
@@ -14,7 +14,7 @@
     "mongoose": "^5.2.12",
     "morgan": "~1.9.0",
     "node-schedule": "^1.3.0",
-    "u3.js": "^0.1.3"
+    "u3.js": "git://github.com/ultrain-os/u3.js.git#dev"
   },
   "devDependencies": {
     "axios": "^0.18.0",
