--- a/docker/node1/config/config.ini
+++ b/docker/node1/config/config.ini
@@ -1,8 +1,9 @@
 # the endpoint upon which to listen for incoming connections (ultrainio::bnet_plugin)
 verbose-http-errors = true
 http-validate-host = false
-genesis-startup-time = 525600
-genesis-delay = 20
+
+genesis-time = 2018-12-25 10:00:00
+genesis-startup-time = 5256000
 
 max-round-seconds = 4
 max-phase-seconds = 2
@@ -43,7 +44,6 @@ max-irreversible-block-age = 10
 
 producer-name = ultrainio
 
-signature-provider = UTR6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV=KEY:5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3
 kultraind-provider-timeout = 5
 txn-reference-block-lag = 0
 contract-return-string-length = 512
