--- a/docker/history/package.json
+++ b/docker/history/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "ultrain-rest-api",
-  "version": "0.0.1",
+  "name": "history-api",
+  "version": "0.0.3",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@mongoosejs/double": "^0.1.2",
     "body-parser": "^1.18.3",
     "connect-timeout": "^1.9.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "excel-export": "^0.5.1",
     "express": "~4.16.0",
-    "mongoose": "^5.2.12",
-    "morgan": "~1.9.0",
+    "express-modify-response": "^1.0.2",
+    "moment": "^2.23.0",
+    "mongoose": "^5.4.1",
     "node-schedule": "^1.3.0",
-    "u3.js": "git://github.com/ultrain-os/u3.js.git#dev"
+    "request-ip": "^2.1.3",
+    "u3.js": "^0.2.25",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^3.8.0"
   },
   "devDependencies": {
     "axios": "^0.18.0",
