--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "u3.js",
-  "version": "0.2.16",
+  "version": "0.3.1",
   "description": "A general library wrapped in javascript for interacting with Ultrain",
   "main": "index.js",
   "directories": {
@@ -8,7 +8,6 @@
   },
   "scripts": {
     "test": "mocha test/index.test.js && mocha test/history.test.js --timeout 30000",
-    "docs": "node test/gendoc.js && rm -rf docs && mkdir docs && node_modules/.bin/jsdoc -c jsdoc.json",
     "dist": "rm -rf dist && mkdir -p dist && babel --copy-files src --out-dir dist",
     "bundle": "browserify -o dist/u3.js -s U3 dist/index.js && uglifyjs dist/u3.js -o dist/u3.min.js --source-map --compress --mangle"
   },
@@ -29,9 +28,11 @@
     "node": ">=8"
   },
   "dependencies": {
+    "async": "^2.6.2",
     "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
-    "u3-utils": "^0.0.4"
+    "u3-utils": "^0.0.4",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^3.8.0"
   },
   "devDependencies": {
     "@types/node": "^8.0.3",
@@ -41,31 +42,14 @@
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "blanket": "*",
-    "bluebird": "^3.5.0",
     "body-parser": "^1.18.3",
     "browserify": "^14.4.0",
     "camel-case": "^3.0.0",
     "chai": "4.1.2",
-    "connect": "^3.6.6",
-    "coveralls": "^3.0.0",
-    "docdash": "^1.0.0",
-    "documentation": "^5.3.2",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^12.0.0-alpha.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.1.0",
     "express": "^4.16.3",
     "http": "0.0.0",
-    "istanbul": "^0.4.5",
-    "jsdoc": "^3.5.5",
     "mocha": "3.5.0",
-    "nyc": "^11.7.1",
-    "pedding": "*",
     "should": "1.2.2",
-    "travis-cov": "*",
     "uglify-es": "^3.3.9",
     "url": "^0.11.0"
   },
