import from u3.js/src -> u3.js

--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "u3.js",
-  "version": "0.3.2",
+  "version": "0.3.9",
   "description": "A general library wrapped in javascript for interacting with Ultrain",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "mocha test/index.test.js && mocha test/history.test.js --timeout 30000",
-    "dist": "rm -rf dist && mkdir -p dist && babel --copy-files src --out-dir dist",
-    "bundle": "browserify -o dist/u3.js -s U3 dist/index.js && uglifyjs dist/u3.js -o dist/u3.min.js --source-map --compress --mangle"
+    "test": "mocha test/index.test.js && mocha test/history.test.js --timeout 30000"
   },
   "repository": {
     "type": "git",
@@ -30,7 +28,7 @@
   "dependencies": {
     "async": "^2.6.2",
     "axios": "^0.18.0",
-    "u3-utils": "^0.0.4",
+    "u3-utils": "^0.0.5",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.8.0"
   },
