--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "u3.js",
-  "version": "0.3.8",
+  "version": "0.3.9",
   "description": "A general library wrapped in javascript for interacting with Ultrain",
   "main": "index.js",
   "directories": {
@@ -30,7 +30,7 @@
   "dependencies": {
     "async": "^2.6.2",
     "axios": "^0.18.0",
-    "u3-utils": "^0.0.4",
+    "u3-utils": "^0.0.5",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.8.0"
   },
@@ -47,11 +47,9 @@
     "camel-case": "^3.0.0",
     "chai": "4.1.2",
     "express": "^4.16.3",
-    "http": "0.0.0",
     "mocha": "3.5.0",
     "should": "1.2.2",
-    "uglify-es": "^3.3.9",
-    "url": "^0.11.0"
+    "uglify-es": "^3.3.9"
   },
   "license": "MIT",
   "babel": {
