--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "async": "^2.6.2",
     "axios": "^0.18.0",
+    "socket.io": "^2.3.0",
     "u3-utils": "^0.0.6",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.8.0"
