ultrainio->gcfio  ultrio->gcfio

--- a/docker/node1/config/config.ini
+++ b/docker/node1/config/config.ini
@@ -1,4 +1,4 @@
-# the endpoint upon which to listen for incoming connections (ultrainio::bnet_plugin)
+# the endpoint upon which to listen for incoming connections (gcfio::bnet_plugin)
 verbose-http-errors = true
 http-validate-host = false
 
@@ -44,7 +44,7 @@ pause-on-startup = false
 max-transaction-time = 300
 max-irreversible-block-age = 10
 
-producer-name = ultrainio
+producer-name = gcfio
 
 kultraind-provider-timeout = 5
 txn-reference-block-lag = 0
@@ -53,22 +53,22 @@ contract-emit-string-length = 128
 wallet-dir = "."
 unlock-timeout = 900
 
-chain-name=ultrainio
+chain-name=gcfio
 
 # Plugin(s) to enable, may be specified multiple times
 tcp-peer-key = UTR6BThE2vci6Jqq5YyfYCy8mHMdk14Dfx9n5RWfkL8jcMDW7PJ5b
 # plugin = 
-plugin = ultrainio::bnet_plugin
-plugin = ultrainio::chain_plugin
-plugin = ultrainio::chain_api_plugin
-plugin = ultrainio::history_api_plugin
-plugin = ultrainio::history_plugin
-#plugin = ultrainio::mongo_db_plugin
-plugin = ultrainio::net_plugin
-plugin = ultrainio::net_api_plugin
-plugin = ultrainio::txn_test_gen_plugin
-plugin = ultrainio::http_plugin
-plugin = ultrainio::http_client_plugin
-plugin = ultrainio::wallet_plugin
-plugin = ultrainio::wallet_api_plugin
+plugin = gcfio::bnet_plugin
+plugin = gcfio::chain_plugin
+plugin = gcfio::chain_api_plugin
+plugin = gcfio::history_api_plugin
+plugin = gcfio::history_plugin
+#plugin = gcfio::mongo_db_plugin
+plugin = gcfio::net_plugin
+plugin = gcfio::net_api_plugin
+plugin = gcfio::txn_test_gen_plugin
+plugin = gcfio::http_plugin
+plugin = gcfio::http_client_plugin
+plugin = gcfio::wallet_plugin
+plugin = gcfio::wallet_api_plugin
 
