--- a/docker/node2/config/config.ini
+++ b/docker/node2/config/config.ini
@@ -50,7 +50,7 @@ pause-on-startup = false
 max-transaction-time = 300
 max-irreversible-block-age = 10
 
-producer-name = ultrainio
+producer-name = gcfio
 producer-name = inita
 
 kultraind-provider-timeout = 5
@@ -59,27 +59,27 @@ txn-reference-block-lag = 0
 contract-return-string-length = 512
 contract-emit-string-length = 128
 
-# The path of the wallet files (absolute path or relative to application data dir) (ultrainio::wallet_plugin)
+# The path of the wallet files (absolute path or relative to application data dir) (gcfio::wallet_plugin)
 wallet-dir = "."
 
-# Timeout for unlocked wallet in seconds (default 900 (15 minutes)). Wallets will automatically lock after specified number of seconds of inactivity. Activity is defined as any wallet command e.g. list-wallets. (ultrainio::wallet_plugin)
+# Timeout for unlocked wallet in seconds (default 900 (15 minutes)). Wallets will automatically lock after specified number of seconds of inactivity. Activity is defined as any wallet command e.g. list-wallets. (gcfio::wallet_plugin)
 unlock-timeout = 900
 
-chain-name=ultrainio
+chain-name=gcfio
 tcp-peer-key = UTR7Z3j9M7dcXfrBGcBbENQphuG8hAEYyPueT7cc8XzKgzymppJ9Y
 
 # plugin =
-plugin = ultrainio::bnet_plugin
-plugin = ultrainio::chain_plugin
-plugin = ultrainio::chain_api_plugin
-plugin = ultrainio::history_api_plugin
-plugin = ultrainio::history_plugin
-plugin = ultrainio::mongo_db_plugin
-plugin = ultrainio::net_plugin
-plugin = ultrainio::net_api_plugin
-plugin = ultrainio::txn_test_gen_plugin
-plugin = ultrainio::http_plugin
-plugin = ultrainio::http_client_plugin
-plugin = ultrainio::wallet_plugin
-plugin = ultrainio::wallet_api_plugin
+plugin = gcfio::bnet_plugin
+plugin = gcfio::chain_plugin
+plugin = gcfio::chain_api_plugin
+plugin = gcfio::history_api_plugin
+plugin = gcfio::history_plugin
+plugin = gcfio::mongo_db_plugin
+plugin = gcfio::net_plugin
+plugin = gcfio::net_api_plugin
+plugin = gcfio::txn_test_gen_plugin
+plugin = gcfio::http_plugin
+plugin = gcfio::http_client_plugin
+plugin = gcfio::wallet_plugin
+plugin = gcfio::wallet_api_plugin
 
